--- a/src/components/react-period-selector/react-period-selector.scss
+++ b/src/components/react-period-selector/react-period-selector.scss
@@ -44,7 +44,7 @@ $boundary: #edeeef;
     display: inline-block;
     height: 40px;
     line-height: 40px;
-    width: 60px;
+    width: 40px;
     cursor: pointer;
     text-align: center;
     margin-top: 1px;
@@ -62,6 +62,12 @@ $boundary: #edeeef;
     background-color: $brand;
     color: white;
     opacity: 1;
+  }
+  .ps-edge-start {
+    border-radius: 4px 0 0 4px;
+  }
+  .ps-edge-end {
+    border-radius: 0 4px 4px 0;
   }
 }
 .ps-presets {
